<resources>
    <string name="app_name">Med Card</string>

    <string name="add_record">Add new record</string>
    <string name="title_hint">Title</string>
    <string name="date_hint">Date (YYYY-MM-DD)</string>
    <string name="description_hint">Description</string>
    <string name="doctor_hint">Doctor (optional)</string>
    <string name="drug_hint">Drug (for medications)</string>
    <string name="dosage_hint">Dosage (for medications)</string>
    <string name="reaction_hint">Reaction (for allergies)</string>
    <string name="save_button">Save</string>
    <string name="Delete_Button"> Delete </string>
    <string name="action_settings">Settings</string>
    <string name="button_theme">Switch theme</string>
    <string name="language_button">Switch language</string>

    <string name="doctor_null">Doctor not specified</string>
    <string name="dosage_null">No medications listed</string>
    <string name="allergies_null">Allergies not listed</string>
    <string name="confirmation">Are you sure you want to delete this record? </string>
    <string name="cancel">Cancel</string>
    <string name="requirment">Title is required</string>
    <string name="notification_title">Dont forget</string>
    <string name="notification_body">Medical record scheduled today</string>
</resources>